amend menu to define supervisor

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,8 +12,8 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-      	<ion-item nav-clear menu-close href="#/orgchart">
-          Organization Chart
+      	<ion-item nav-clear menu-close on-tap="showPopup()">
+          Define Supervisor
         </ion-item>
       </ion-list>
     </ion-content>
