--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -6,14 +6,22 @@
   	<ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left" ng-controller="MenuCtrl">
+  <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-      	<ion-item nav-clear menu-close on-tap="showPopup()">
-          Define Supervisor
+      	<ion-item nav-clear menu-close>
+		<div>Define Supervisor:</div>
+		<div ng-init="selected=model.supervisor">
+			<fancy-select-model template-url="templates/user/select.html" 
+				ng-selected="selected" 
+				ng-model="collection" 
+				label="username" 
+				title="Select users">
+			</fancy-select-model>
+		</div>
         </ion-item>
       </ion-list>
     </ion-content>
