revise admin select supervisor layout

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -144,6 +144,10 @@ div.cellStyle {
 	color: #D3D3D3;
 }
 
-.selectedStyle {
+.selectedUser {
 	background-color: yellow;
+}
+
+.selectedAdmin {
+	background-color: yellowgreen;
 }
