--- a/www/templates/user/adminSelect.html
+++ b/www/templates/user/adminSelect.html
@@ -1,19 +1,20 @@
 <ion-modal-view>
   <ion-header-bar class="bar-positive">
     <h1 class="title">Admin Define Supervisor</h1>
+    <button class="button button-clear button-primary" ng-click="adminModal.hide();adminSave(model);">Save</button>
   </ion-header-bar>
   <ion-view>
 
     <ion-content class="" scroll='true'>
-      <div class="row">
+      <div class="row" style="margin-left: 0px;">
         <div class="col col-50">
-          <ion-scroll style="width:100%; height: 500px"> 
+          <ion-scroll style="width:100%; height: 500px"> Supervisor:
           <ng-include src="'templates/user/user.html'" >
           </ion-scroll>
         </div>
         <div class="col col-50">
-          <ion-scroll style="width:100%; height: 500px"> 
-          <ng-include src="'templates/user/user.html'" >
+          <ion-scroll style="width:100%; height: 500px"> User:
+          <ng-include src="'templates/user/admin.html'" >
           </ion-scroll>
         </div>
       </div>
