--- a/www/templates/user/admin.html
+++ b/www/templates/user/admin.html
@@ -8,7 +8,7 @@
 <ion-list>
   <ion-item ng-repeat="model in collection.models" 
     item="item" class="item-avatar"
-    ng-click="highlightAdmin(model, collection);" 
+    ng-click="highlightUser(model);" 
     ng-class="{'selectedAdmin': selUser.username == model.username}">
       <i class="icon ion-person"></i>
       <h2><span>{{model.username}}</span></h2>
