--- a/www/templates/user/userSelect.html
+++ b/www/templates/user/userSelect.html
@@ -4,7 +4,7 @@
     <button class="button button-clear button-primary" ng-click="userModal.hide();userSave(model);">Save</button>
   </ion-header-bar>
   <ion-content>
-  <ng-include src="'templates/user/user.html'" >
+  <ng-include src="'templates/user/supervisor.html'" >
 
   </ng-include> 
   </ion-content>
