revise select user list

--- a/www/templates/user/user.html
+++ b/www/templates/user/user.html
@@ -1,14 +1,14 @@
 <div>
   <label class="item item-input">
     <i class="icon ion-search placeholder-icon"></i>
-    <input type="search" placeholder="Search" >
+    <input type="search" ng-model="searchText" placeholder="Search" >
   </label>
 </div>
 <ion-list>
-  <ion-item ng-repeat="model in allUsers.models" 
+  <ion-item ng-repeat="model in allUsers.models | UserFilter:searchText" 
     item="item" class="item-avatar"
     ng-click="highlightUser(model);" 
-    ng-class="{'selectedAdmin': selUser.username == model.username}">
+    ng-class="{'selectedUser': selUser.username == model.username}">
       <i class="icon ion-person"></i>
       <h2><span>{{model.username}}</span></h2>
       <p><span ng-if="model.title" style="font-weight:bold">{{model.title}}</span></p>
@@ -16,5 +16,5 @@
 </ion-list> 
 
 <ion-infinite-scroll ng-if="collection.state.skip < collection.state.count"
-  on-infinite="loadMore()"> 
+  on-infinite="loadMoreUsers()"> 
 </ion-infinite-scroll>
