--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -145,9 +145,9 @@ div.cellStyle {
 }
 
 .selectedUser {
-	background-color: yellow;
+	background-color: turquoise;
 }
 
-.selectedAdmin {
-	background-color: yellowgreen;
+.selectedSupervisor {
+	background-color: yellow;
 }
